<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/main"
tools:context=".crearProducto">

<TextView
    android:id="@+id/tvTitulo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/agregar_datos"
    android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="50dp"
    />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilTemperatura"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:layout_marginStart="30dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="30dp"
    android:hint="@string/temperatura"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tvTitulo">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etTemperatura"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilViento"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:layout_marginStart="30dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="30dp"
    android:hint="@string/viento"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tilTemperatura">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etViento"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilHumedad"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:layout_marginStart="30dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="30dp"
    android:hint="@string/humedad"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tilViento">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etHumedad"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilPresion"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:layout_marginStart="30dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="30dp"
    android:hint="@string/presion"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tilHumedad">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPresion"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</com.google.android.material.textfield.TextInputLayout>



<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/guardar"
    android:id="@+id/btnGuardar"
    app:layout_constraintTop_toBottomOf="@id/tilPresion"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="50dp"/>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/volver"
    android:id="@+id/btnVolver"
    app:layout_constraintTop_toBottomOf="@id/btnGuardar"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="50dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
