<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vistas.PerfilFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main"
        tools:context=".perfil">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_perfil"
            tools:context=".Vistas.PerfilFragment">

            <!-- TODO: Update blank fragment layout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".perfil">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perfil"
                    android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="50dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAgregarDatos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agregar_datos"
                    android:layout_marginHorizontal="80dp"
                    android:layout_marginTop="100dp"
                    app:layout_constraintTop_toBottomOf="@id/textView" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCambiarPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cambiar_contrase_a"
                    android:layout_marginHorizontal="80dp"
                    android:layout_marginTop="80dp"
                    app:layout_constraintTop_toBottomOf="@id/btnAgregarDatos" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cerrar_sesi_n"
                    android:layout_marginHorizontal="80dp"
                    android:layout_marginTop="80dp"
                    app:layout_constraintTop_toBottomOf="@id/btnCambiarPwd" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:id="@+id/bottom_navigation"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_navigation_menu"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>