<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vistas.PresionFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/grey"

        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"

                android:contentDescription="@string/imagen"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/meteorologia" />

            <TextView
                android:id="@+id/textButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/lato_regular"
                android:gravity="center_horizontal"
                android:text="@string/presion_atmosferica"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textButton"
                android:textSize="50sp"
                android:background="@color/grey"
                android:layout_marginStart="30dp"/>


            <TextView
                android:id="@+id/porciento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="200dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/hpa"
                android:textColor="@color/white"
                android:textSize="60sp" />



        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>