<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vistas.HumedadFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context=".humedad">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"

                android:contentDescription="@string/imagen"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/meteorologia" />

            <TextView
                android:id="@+id/textButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/lato_regular"
                android:gravity="center_horizontal"
                android:text="@string/humedad"
                android:textColor="@color/white"
                android:textSize="80sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textButton"
                android:textSize="100sp"
                android:background="@color/grey"
                android:layout_marginStart="50dp"/>


            <TextView
                android:id="@+id/porciento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textButton"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/num"
                android:text="@string/porciento"
                android:textColor="@color/white"
                android:textSize="100sp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>